--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1557,7 +1557,7 @@ select {
 }
 
 body {
-  background-color: transparent;
+  background-color: var(--purple);
   font-family: body;
   font-size: 16px;
   font-weight: 100;
@@ -2211,6 +2211,15 @@ a:hover {
 .split40 > div:nth-of-type(2) {
   width: 60%;
   flex: 1 1 auto;
+}
+
+#BookingDetails {
+  margin: 2em auto;
+  width: 20em;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.3);
+  font-size: 1.1em;
+  color: var(--purple);
 }
 
 #acu-chin-1 {
