--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -44,7 +44,7 @@
 }
 
 body {
-    background-color: transparent;
+    background-color: var(--purple);
     font-family: body;
     font-size: 16px;
     font-weight: 100;
@@ -482,6 +482,15 @@ a:hover {color:red;}
 .split40 > div:nth-of-type(2){
     width:60%;
     flex: 1 1 auto;
+}
+
+#BookingDetails{
+    margin: 2em auto;
+    width: 20em;
+    border-radius: 5px;
+    background-color: rgba(255,255,255,0.7);
+    font-size: 1.1em;
+    color: var(--purple);
 }
 
 #acu-chin-1 {
