--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1510,7 +1510,8 @@ select {
   --main-color: #06c;
   --purple: rgb(105, 12, 104);
   --yellow: rgb(240, 154, 53);
-  --yellow4: rgba(240, 154, 53, 0.4);
+  --yellow10: rgba(240, 154, 53, 0.1);
+  --yellow40: rgba(240, 154, 53, 0.4);
   --pink: rgb(234, 78, 80);
 }
 
@@ -1557,7 +1558,7 @@ select {
 }
 
 body {
-  background-color: var(--purple);
+  background-color: transparent;
   font-family: body;
   font-size: 16px;
   font-weight: 100;
@@ -2217,7 +2218,7 @@ a:hover {
   margin: 2em auto;
   width: 20em;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 1.1em;
   color: var(--purple);
 }
@@ -2480,6 +2481,11 @@ a:hover {
   display: inline-block;
   margin: 0 0 2em 0;
   max-width: 100%;
+}
+
+#CondDesc,
+#TreatmentDesc {
+  background-color: var(--yellow10);
 }
 
 .quoteBlock {
