--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1513,6 +1513,9 @@ select {
   --yellow10: rgba(240, 154, 53, 0.1);
   --yellow40: rgba(240, 154, 53, 0.4);
   --pink: rgb(234, 78, 80);
+  --pink30: rgba(234, 78, 80, 0.3);
+  --white30: rgba(255, 255, 255, 0.3);
+  --white70: rgba(255, 255, 255, 0.7);
 }
 
 @font-face {
@@ -1741,6 +1744,18 @@ h5 {
   background-color: var(--yellow);
 }
 
+.yellow10BG {
+  background-color: var(--yellow10);
+}
+
+.letterStretch {
+  letter-spacing: 1;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
 .central {
   width: 600px;
   max-width: 90%;
@@ -1856,11 +1871,10 @@ a {
   text-decoration: none;
   transition: color 0.5s;
   font-family: inherit;
-  font-weight: bold;
 }
 
 a:hover {
-  color: red;
+  color: var(--pink);
 }
 
 .dropdown-menu {
@@ -2111,6 +2125,10 @@ a:hover {
   color: rgb(80, 80, 80);
 }
 
+.button:hover {
+  color: var(--white70);
+}
+
 .button.large {
   font-size: 1.1em;
 }
@@ -2216,11 +2234,31 @@ a:hover {
 
 #BookingDetails {
   margin: 2em auto;
-  width: 20em;
+  width: 24em;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.7);
   font-size: 1.1em;
   color: var(--purple);
+  font-weight: bold;
+  padding: 1em 2em;
+}
+
+#BookingDetails .label {
+  display: inline-block;
+  width: 5em;
+  text-align: right;
+}
+
+#BookingDetails .link {
+  display: inline-block;
+  width: 18em;
+  margin-left: 1em;
+  text-align: left;
+  font-weight: normal;
+}
+
+.shaded {
+  background-color: rgb(255, 255, 255, 0.73);
 }
 
 #acu-chin-1 {
@@ -2230,9 +2268,9 @@ a:hover {
   background-position: 70%;
 }
 
-#acu-chin-1 .logo {
-  margin-top: 2em;
-}
+/*#acu-chin-1 .logo{
+    margin-top: 2em;
+}*/
 
 #acu-chin-1 .button {
   position: absolute;
@@ -2483,10 +2521,9 @@ a:hover {
   max-width: 100%;
 }
 
-#CondDesc,
-#TreatmentDesc {
-  background-color: var(--yellow10);
-}
+/*#CondDesc, #TreatmentDesc {
+    background-color: var(--yellow10);
+}*/
 
 .quoteBlock {
   position: relative;
