--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1799,6 +1799,10 @@ h5 {
   padding-bottom: 2.5em;
 }
 
+.paddedBig.topOnly {
+  padding-bottom: 0em;
+}
+
 .paddedBig {
   padding-top: 1.5em;
   padding-bottom: 1.5em;
@@ -2233,7 +2237,7 @@ a:hover {
 }
 
 #BookingDetails {
-  margin: 2em auto;
+  margin: 0 auto;
   width: 24em;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.7);
