--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -495,7 +495,7 @@ a:hover {color:var(--pink);}
 }
 
 #BookingDetails{
-    margin: 2em auto;
+    margin: 0 auto;
     width: 24em;
     border-radius: 5px;
     background-color: rgba(255,255,255,0.7);
