--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1512,6 +1512,8 @@ select {
   --yellow: rgb(240, 154, 53);
   --yellow4: rgba(240, 154, 53, 0.4);
   --pink: rgb(234, 78, 80);
+  --white30: rgba(255, 255, 255, 0.3);
+  --white70: rgba(255, 255, 255, 0.7);
 }
 
 @font-face {
@@ -1740,6 +1742,14 @@ h5 {
   background-color: var(--yellow);
 }
 
+.shaded30 {
+  background-color: var(--white30);
+}
+
+.shaded70 {
+  background-color: var(--white70);
+}
+
 .central {
   width: 600px;
   max-width: 90%;
@@ -1823,6 +1833,10 @@ h5 {
 .smallFont {
   font-size: 0.9em;
   vertical-align: baseline;
+}
+
+.letterStretch {
+  letter-spacing: 1;
 }
 
 .bold {
@@ -2218,10 +2232,6 @@ a:hover {
   height: 26em;
   background-image: url(/images/acupuncture/chin-amanda-seirin.jpg);
   background-position: 70%;
-}
-
-#acu-chin-1 .logo {
-  margin-top: 2em;
 }
 
 #acu-chin-1 .button {
