--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1515,6 +1515,7 @@ select {
   --pink: rgb(234, 78, 80);
   --pink30: rgba(234, 78, 80, 0.3);
   --white30: rgba(255, 255, 255, 0.3);
+  --white50: rgba(255, 255, 255, 0.5);
   --white70: rgba(255, 255, 255, 0.7);
 }
 
@@ -1752,6 +1753,10 @@ h5 {
   background-color: var(--white30);
 }
 
+.shaded50 {
+  background-color: var(--white50);
+}
+
 .shaded70 {
   background-color: var(--white70);
 }
@@ -1814,6 +1819,11 @@ h5 {
 .paddedBig {
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+}
+
+.paddedXSmall {
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
 }
 
 .paddedSmall {
@@ -2314,9 +2324,9 @@ a:hover {
 }
 
 #palosanto {
-  height: 12em;
+  height: 45vh;
   background-image: url(/images/other/palosanto.jpg);
-  background-position: 50% 55%;
+  background-position: 50% 35%;
 }
 
 #headshot {
@@ -2339,7 +2349,7 @@ a:hover {
 }
 
 #pulse-1 {
-  height: 15em;
+  height: 45vh;
   background-image: url(/images/vitals/wrist-jason-1.jpg);
   background-position: 50% 55%;
 }
