--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2336,7 +2336,7 @@ a:hover {
 }
 
 #head-1 {
-  height: 15em;
+  height: 45vh;
   padding-top: 4em;
   background-image: url(/images/acupuncture/head-benji.jpg);
   background-position: 40% 50%;
