--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -42,6 +42,18 @@
 }
 @font-face{
     font-family: 'body';
+    src: url('/fonts/roboto-light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face{
+    font-family: 'body';
+    src: url('/fonts/roboto-light-italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face{
+    font-family: 'body';
     src: url('/fonts/roboto-bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
@@ -51,7 +63,7 @@ body {
     background-color: transparent;
     font-family: body;
     font-size: 16px;
-    font-weight: 100;
+    font-weight: normal;
     line-height: 1.5;
     text-align: center;
     min-height: 100vh;
@@ -83,6 +95,15 @@ footer .logo{
     width:5em;
     margin-left:0;
 }
+footer .logo.mobile, footer .icons.mobile{
+    display: block;
+    width:100%;
+    margin: 1em 0 1em 0;
+}
+footer .contact.mobile, footer .hours.mobile{
+    text-align: center;
+    display: block;
+}
 footer .contact{
     text-align: left;
     display: inline-block;
@@ -97,6 +118,7 @@ footer .hours{
     transform: translateY(-50%);
 }
 footer .hours span{
+    text-align: left;
     display: inline-block;
     width:5.5em;
 }
@@ -147,7 +169,7 @@ h3 {
 h4 {
     font-size: 1.1em;
     color:var(--purple);
-    font-weight: normal;
+    font-weight: bold;
 }
 h5 {font-weight: normal;color:var(--purple);}
 .inline{display: inline;}
@@ -184,6 +206,7 @@ h5 {font-weight: normal;color:var(--purple);}
 .paddedXBig{padding-top:2.5em;padding-bottom: 2.5em;}
 .paddedBig.topOnly{padding-bottom: 0em;}
 .paddedBig{padding-top:1.5em;padding-bottom: 1.5em;}
+.paddedXSmall{padding-top:0.25em;padding-bottom: 0.25em;}
 .paddedSmall{padding-top:0.5em;padding-bottom: 0.5em;}
 .paddedSides{padding-left:2.5em;padding-right: 2.5em;box-sizing: border-box;}
 .paddedSides.small{padding-left:1em;padding-right: 1em;}
@@ -364,11 +387,6 @@ a:hover {color:var(--pink);}
     background-repeat: no-repeat;
 }
 .logo.white{background-image: url(/images/logo/logo-notext-white.png);}
-.logo.mobile, .icons.mobile{
-    display: block;
-    width:100%;
-    margin: 1em 0 1em 0;
-}
 .logo.popUp{
     transform: translateY(-40%);
     margin-bottom: -2em;
@@ -494,15 +512,20 @@ a:hover {color:var(--pink);}
     flex: 1 1 auto;
 }
 
-#BookingDetails{
-    margin: 0 auto;
-    width: 24em;
+#ScheduleWidget{
+    margin: 1em auto;
+    width: 800px;
+    max-width: 93%;
     border-radius: 5px;
-    background-color: rgba(255,255,255,0.7);
+    height: 700px;
+    background-color: var(--shaded30);
+    border: 2px solid var(--yellow);
     font-size: 1.1em;
     color: var(--purple);
     font-weight: bold;
-    padding: 1em 2em;
+    padding: 0.5em 1em;
+}
+#BookingDetails{
 }
 #BookingDetails .label{
     display: inline-block;
@@ -657,7 +680,11 @@ a:hover {color:var(--pink);}
 
 #TreatmentMenu, #ConditionMenu, #RateMenu{
     position: sticky;
-    top:4em;
+    top:3.4em;
+    font-size: 1.12em;
+}
+#TreatmentMenu .title, #ConditionMenu .title, #RateMenu .title{
+    background-color: var(--yellow10);
 }
 #AcuListing .splash{
     background-image: url(/images/acupuncture/arm-cara-2.jpg);
@@ -1178,7 +1205,7 @@ a:hover {color:var(--pink);}
 }
 
 .menuBar .title.active {
-    background-color: var(--yellow);
+    background-color: var(--yellow) !important;
     color: white;
 }
 .menuBar li.active{
