--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -524,6 +524,7 @@ a:hover {color:var(--pink);}
     color: var(--purple);
     font-weight: bold;
     padding: 0.5em 1em;
+    box-sizing: border-box;
 }
 #BookingDetails{
 }
