--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -1221,8 +1221,8 @@ a:hover {color:var(--pink);}
     color: white;
 }
 .menuBar li.active{
-    background-color: var(--yellow);
-    color: white;
+    color: var(--yellow);
+    font-weight: bold;
 }
 
 .menuBar .underline{
